--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,11 @@
 /.env.local
 /.env.local.php
 /.env.*.local
+/.env
 /config/secrets/prod/prod.decrypt.private.php
 /public/bundles/
 /var/
 /vendor/
+/mysql
+.idea
 ###< symfony/framework-bundle ###
