--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,12 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "doctrine/doctrine-bundle": "^2.0",
+        "symfony-bundles/json-request-bundle": "^2.0",
         "symfony/console": "4.4.*",
         "symfony/dotenv": "4.4.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "4.4.*",
+        "symfony/messenger": "4.4.*",
         "symfony/orm-pack": "^1.0",
         "symfony/yaml": "4.4.*"
     },
