--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,9 @@
 /mysql
 .idea
 ###< symfony/framework-bundle ###
+
+###> symfony/phpunit-bridge ###
+.phpunit
+.phpunit.result.cache
+/phpunit.xml
+###< symfony/phpunit-bridge ###
