--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
     image: mysql:5.7
     container_name: mysql
     environment:
-      - MYSQL_DATABASE=symfony
+      - MYSQL_DATABASE=symfony1
       - MYSQL_ROOT_PASSWORD=password
       - MYSQL_USER=admin
       - MYSQL_PASSWORD=secret
