--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "doctrine/doctrine-bundle": "^2.0",
+        "ramsey/uuid": "^3.9",
         "symfony-bundles/json-request-bundle": "^2.0",
         "symfony/console": "4.4.*",
         "symfony/dotenv": "4.4.*",
@@ -15,7 +16,8 @@
         "symfony/messenger": "4.4.*",
         "symfony/orm-pack": "^1.0",
         "symfony/validator": "4.4.*",
-        "symfony/yaml": "4.4.*"
+        "symfony/yaml": "4.4.*",
+        "webmozart/assert": "^1.6"
     },
     "require-dev": {
         "symfony/maker-bundle": "^1.14",
