--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,30 @@
-version: '3'
+version: "3.7"
 services:
-  nginx:
-    build:
-      context: ./docker
-      dockerfile: nginx.docker
-    volumes:
-      - ./:/var/www
-    ports:
-      - "8081:80"
-  php-fpm:
-    container_name: php
-    build:
-      context: ./docker
-      dockerfile: php-fpm.docker
-    depends_on:
-      - mysql
-    volumes:
-      - ./:/var/www
-  mysql:
-    image: mysql:5.7
-    command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
-    container_name: mysql
-    volumes:
-      - ./docker/databases:/docker-entrypoint-initdb.d
-      - "./mysql:/var/lib/mysql"
-    ports:
-      - "8989:3306"
-    environment:
-      - MYSQL_ROOT_PASSWORD=password
-      - MYSQL_PASSWORD=local
+    nginx:
+        container_name: nginx
+        build:
+            context: ./docker/nginx
+        volumes:
+            - ./:/var/www
+        ports:
+            - "8081:80"
+    php-fpm:
+        container_name: php
+        build:
+            context: ./docker/php-fpm
+        depends_on:
+            - mysql
+        volumes:
+            - ./:/var/www
+    mysql:
+        container_name: mysql
+        image: mysql:5.7
+        command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
+        volumes:
+            - ./docker/databases:/docker-entrypoint-initdb.d
+            - "./mysql:/var/lib/mysql"
+        ports:
+            - "8989:3306"
+        environment:
+            - MYSQL_ROOT_PASSWORD=password
+            - MYSQL_PASSWORD=local
