--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,6 @@
         "ext-iconv": "*",
         "doctrine/doctrine-bundle": "^2.0",
         "ramsey/uuid": "^3.9",
-        "symfony-bundles/json-request-bundle": "^2.0",
         "symfony/console": "4.4.*",
         "symfony/dotenv": "4.4.*",
         "symfony/flex": "^1.3.1",
@@ -15,6 +14,7 @@
         "symfony/mailer": "4.4.*",
         "symfony/messenger": "4.4.*",
         "symfony/orm-pack": "^1.0",
+        "symfony/serializer-pack": "^1.0",
         "symfony/validator": "4.4.*",
         "symfony/yaml": "4.4.*",
         "webmozart/assert": "^1.6"
