--- a/.env
+++ b/.env
@@ -25,5 +25,17 @@ APP_SECRET=24f665608cc7213a909f26bac3f2b269
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL=mysql://root:password@mysql:3306/symfony1?serverVersion=5.7
+#DATABASE_URL=mysql://root:password@mysql:3306/dev?serverVersion=5.7
+DATABASE_URL=postgresql://app:secret@127.0.0.1:5432/app
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/messenger ###
+# Choose one of the transports below
+# MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
+MESSENGER_TRANSPORT_DSN=doctrine://default
+# MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
+###< symfony/messenger ###
+
+###> symfony/mailer ###
+MAILER_DSN=smtp://
+###< symfony/mailer ###
