--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,18 +13,19 @@ services:
         build:
             context: ./docker/php-fpm
         depends_on:
-            - mysql
+            - postgres
         volumes:
             - ./:/var/www
-    mysql:
-        container_name: mysql
-        image: mysql:5.7
-        command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
+    postgres:
+        container_name: postgres
+        image: postgres:11.2-alpine
         volumes:
-            - ./docker/databases:/docker-entrypoint-initdb.d
-            - "./mysql:/var/lib/mysql"
-        ports:
-            - "8989:3306"
+            - postgres:/var/lib/postgresql/data
         environment:
-            - MYSQL_ROOT_PASSWORD=password
-            - MYSQL_PASSWORD=local
+            POSTGRES_USER: app
+            POSTGRES_PASSWORD: secret
+            POSTGRES_DB: app
+        ports:
+            - "54321:5432"
+volumes:
+    postgres:
