--- a/config/routes/annotations.yaml
+++ b/config/routes/annotations.yaml
@@ -1,3 +1,8 @@
 controllers:
     resource: ../../src/Controller/
+    prefix: /api
+    name_prefix: api.
+    trailing_slash_on_root: true
     type: annotation
+    defaults:
+        _format: json
