--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "doctrine/doctrine-bundle": "^2.0",
+        "firebase/php-jwt": "^5.0",
         "ramsey/uuid": "^3.9",
         "symfony/console": "4.4.*",
         "symfony/dotenv": "4.4.*",
