access token repository + tests

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,10 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
+    jwt_ttl: '+1 hour'
+    jwt_algorithm: 'RS256'
+    jwt_private_key: '%kernel.project_dir%/private.key'
+    jwt_public_key: '%kernel.project_dir%/public.key'
 
 services:
     # default configuration for services in *this* file
@@ -23,5 +27,9 @@ services:
         resource: '../src/Controller'
         tags: ['controller.service_arguments']
 
-    # add more service definitions when explicit configuration is needed
-    # please note that last definitions always *replace* previous ones
+    App\Infrastructure\Model\Auth\AccessTokenRepository:
+        arguments:
+            $tokenTTL: '%jwt_ttl%'
+            $jwtAlgorithm: '%jwt_algorithm%'
+            $privateKeyPath: '%jwt_private_key%'
+            $publicKeyPath: '%jwt_public_key%'
