--- a/config/services_test.yaml
+++ b/config/services_test.yaml
@@ -1,3 +1,9 @@
+parameters:
+  jwt_ttl: '+1 hour'
+  jwt_algorithm: 'RS256'
+  jwt_private_key: '%kernel.project_dir%/tests/data/auth/private.key'
+  jwt_public_key: '%kernel.project_dir%/tests/data/auth/public.key'
+
 services:
   _defaults:
     autowire: true
