--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "symfony/mailer": "4.4.*",
         "symfony/messenger": "4.4.*",
         "symfony/orm-pack": "^1.0",
+        "symfony/security-bundle": "4.4.*",
         "symfony/serializer-pack": "^1.0",
         "symfony/validator": "4.4.*",
         "symfony/yaml": "4.4.*",
