--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -19,6 +19,12 @@
         <testsuite name="Project Test Suite">
             <directory>tests</directory>
         </testsuite>
+        <testsuite name="functional">
+            <directory>tests/Functional</directory>
+        </testsuite>
+        <testsuite name="unit">
+            <directory>tests/Unit</directory>
+        </testsuite>
     </testsuites>
 
     <filter>
