reset password feature

--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -10,3 +10,4 @@ framework:
 
         routing:
             'App\Infrastructure\Model\User\Messages\RegistrationEmailNotification': async
+            'App\Infrastructure\Model\Auth\Messages\ResetPassword\ResetPasswordEmailNotification': async
