--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,12 +8,15 @@ services:
             - ./:/var/www
         ports:
             - "8081:80"
+        depends_on:
+            - php-fpm
     php-fpm:
         container_name: php
         build:
             context: ./docker/php-fpm
         depends_on:
             - postgres
+            - redis
         volumes:
             - ./:/var/www
     postgres:
@@ -27,5 +30,10 @@ services:
             POSTGRES_DB: app
         ports:
             - "54321:5432"
+    redis:
+        container_name: redis
+        image: redis:5.0-alpine
+        ports:
+            - 6379:6379
 volumes:
     postgres:
