--- a/docker/php-fpm/Dockerfile
+++ b/docker/php-fpm/Dockerfile
@@ -9,4 +9,12 @@ RUN set -ex \
 
 RUN wget https://getcomposer.org/installer -O - -q | php -- --install-dir=/bin --filename=composer --quiet
 
+RUN set -xe \
+    && apk add --no-cache --update --virtual .phpize-deps $PHPIZE_DEPS \
+    && pecl install -o -f redis  \
+    && echo "extension=redis.so" > /usr/local/etc/php/conf.d/redis.ini \
+    && rm -rf /usr/share/php \
+    && rm -rf /tmp/* \
+    && apk del  .phpize-deps
+
 WORKDIR /var/www
